comments attended to
