# app/Http/Controllers/WorkflowHistoryController.php
@@ -10,9 +10,10 @@ use Illuminate\Support\Facades\DB;
 use App\Http\Resources\WorkflowHistoryCollection;
 use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Http\Resources\Json\ResourceCollection;
+
 class WorkflowHistoryController extends Controller
 {
- /**
+    /**
      * The WorkflowHistoryService instance that will handle the business logic.
      *
      * The constructor injects the service into the controller so it can be used
@@ -25,75 +26,83 @@ class WorkflowHistoryController extends Controller
         $this->workflowHistoryService = $workflowHistoryService;
     }
 
-/**
- * @OA\Put(
- *      path="/workflow-histories/{id}",
- *      operationId="updateWorkflowHistory",
- *      tags={"Workflow Histories"},
- *      summary="Update a workflow history",
- *      description="Updates an existing workflow history record.",
- *      @OA\Parameter(
- *          name="id",
- *          in="path",
- *          description="ID of the workflow history to update",
- *          required=true,
- *          @OA\Schema(type="integer")
- *      ),
- *      @OA\RequestBody(
- *          required=true,
- *          description="Updated workflow history data",
- *          @OA\JsonContent(
- *              required={"user_id", "task_id", "step_id", "process_flow_id", "status"},
- *              @OA\Property(property="user_id", type="integer", example=1),
- *              @OA\Property(property="task_id", type="integer", example=1),
- *              @OA\Property(property="step_id", type="integer", example=1),
- *              @OA\Property(property="process_flow_id", type="integer", example=1),
- *              @OA\Property(property="status", type="boolean", example=true),
- *          ),
- *      ),
- *      @OA\Response(
- *          response=200,
- *          description="Successful operation",
- *          @OA\JsonContent(
- *              ref="#/components/schemas/WorkflowHistory"
- *          )
- *      ),
- *      @OA\Response(
- *          response=404,
- *          description="Workflow history not found"
- *      )
- * )
- *
- * @param \App\Http\Requests\UpdateWorkflowHistoryRequest $request
- * @param int $id
- * @return \Illuminate\Http\JsonResponse
- */
-
-    public function index(Request $request)
-    {
-     $workflowHistories = $this->workflowHistoryService->getWorkflowHistories($request);
-    if ($workflowHistories === null || $workflowHistories->isEmpty()) {
-        return new WorkflowHistoryCollection([]);
-    }
-    return new WorkflowHistoryCollection($workflowHistories);
-    }
-    
     /**
-     * Store a new workflow history.
-     *
-     * This method takes a request and creates a new workflow history.
-     *
+     * @OA\Get(
+     *     path="/workflowhistory",
+     *     summary="Fetch all workflow histories",
+     *     tags={"Workflow Histories"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="array",
+     *             @OA\Items(ref="#/components/schemas/WorkflowHistory")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="Unauthorized"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Not found"
+     *     )
+     * )
+     * 
+     * @param \App\Http\Requests\UpdateWorkflowHistoryRequest $request
+     * @param int $id
+     * @return \Illuminate\Http\JsonResponse
+     */
+
+
+
+    public function index()
+    {
+        $workflowHistories = $this->workflowHistoryService->getWorkflowHistories();
+        return WorkflowHistoryResource::collection($workflowHistories);
+    }
+
+
+    /**
+     * @OA\Post(
+     *      path="/workflowhistory/create",
+     *      operationId="storeWorkflowHistory",
+     *      tags={"Workflow History"},
+     *      summary="Create a new workflow history",
+     *      description="Creates a new workflow history record",
+     *      @OA\RequestBody(
+     *          required=true,
+     *          description="Workflow History data",
+     *          @OA\JsonContent(ref="#/components/schemas/WorkflowHistory")
+     *      ),
+     *      @OA\Response(
+     *          response=201,
+     *          description="Created",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="data", ref="#/components/schemas/WorkflowHistory")
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="The given data was invalid."),
+     *              @OA\Property(property="errors", type="object")
+     *          )
+     *      )
+     * )
+     * 
      * @param StoreWorkflowHistoryRequest $request The request containing the workflow history data.
      * @return WorkflowHistoryResource The created workflow history resource.
+
      */
 
     public function store(StoreWorkflowHistoryRequest $request)
     {
-        return DB::transaction(function () use ($request) 
-        {
+        return DB::transaction(function () use ($request) {
             $storedWorkflowHistory = $this->workflowHistoryService->createWorkflowHistory($request);
-            return new WorkflowHistoryResource($storedWorkflowHistory); 
-        }, 5);   
+            return new WorkflowHistoryResource($storedWorkflowHistory);
+        }, 5);
     }
 
     /**
