# storage/api-docs/api-docs.json
@@ -844,6 +844,93 @@
                     }
                 }
             }
+        },
+        "/workflowhistory": {
+            "get": {
+                "tags": [
+                    "Workflow Histories"
+                ],
+                "summary": "Fetch all workflow histories",
+                "operationId": "637111010cf3c61d55f16c792671b23f",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/WorkflowHistory"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not found"
+                    }
+                }
+            }
+        },
+        "/workflowhistory/create": {
+            "post": {
+                "tags": [
+                    "Workflow History"
+                ],
+                "summary": "Create a new workflow history",
+                "description": "Creates a new workflow history record",
+                "operationId": "storeWorkflowHistory",
+                "requestBody": {
+                    "description": "Workflow History data",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/WorkflowHistory"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/components/schemas/WorkflowHistory"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "The given data was invalid."
+                                        },
+                                        "errors": {
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -1178,6 +1265,29 @@
                     },
                     "status": {
                         "type": "boolean"
+                    }
+                },
+                "type": "object"
+            },
+            "WorkflowHistory": {
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "user_id": {
+                        "type": "integer"
+                    },
+                    "task_id": {
+                        "type": "integer"
+                    },
+                    "step_id": {
+                        "type": "integer"
+                    },
+                    "status": {
+                        "type": "integer"
+                    },
+                    "process_flow_id": {
+                        "type": "integer"
                     }
                 },
                 "type": "object"
